Fix spacing in h1 styles for improved readability

--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -16,6 +16,8 @@ main {
 }
 
 h1 {
+
+  font-size: 3rem;
   font-family: 'Libre Baskerville', serif;
   text-transform: uppercase;
 }
